[package]
name = "timer-blah"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/n1ghtmare/timer-blah"
documentation = "https://github.com/n1ghtmare/timer-blah"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
humantime = "2.1"
indicatif = "0.17.1"
regex = "1.6.0"

